--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,28 @@
 server:
   port: 8082
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
   
 spring:
   application:
     name: RAILWAY-TRAIN-SERVICES
-    
+  datasource:
+    url: jdbc:mysql://localhost:3306/railway-train
+    username: root
+    password: PUS#16push4
+    driver-class-name: com.mysql.cj.jdbc.Driver  
+  jpa:
+    hibernate:
+      ddl-auto: update
+      
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  
 eureka:
   instance:
     prefer-ip-address: true
